fix: Container column span alignment

--- a/src/css/container.css
+++ b/src/css/container.css
@@ -68,11 +68,6 @@ ca-container[columns],
   --gap: 0rem; /* Default no gap between columns */
   --gap-x: var(--gap);
   --gap-y: var(--gap);
-  /* The shrink-factor helps columns shrink responsively a bit. 
-	 * Otherwise they always break at first pixel below max-width. 
-	 * We'll probably want to adjust this over time, with testing.
-	 */
-  --shrink-factor: 0.8;
 
   display: flex;
   flex-direction: row;
@@ -83,6 +78,12 @@ ca-container[columns],
 
   & > * {
     --span: 1;
+    /* The shrink-factor helps columns shrink responsively a bit. 
+	 	 * Otherwise they always break at first pixel below max-width. 
+	 	 * We'll probably want to adjust this over time, with testing.
+	 	 */
+    --shrink-factor: 0.8;
+
     --column-size: calc(
       (
         (var(--max-width) - ((var(--columns) - 1) * var(--gap-x))) /
@@ -94,9 +95,10 @@ ca-container[columns],
       (var(--column-size) * var(--span)) +
       ((var(--span) - 1) * var(--gap-x))
     );
-
     inline-size: var(--cell-size);
-    flex: 1 1 auto;
+
+    /* Larger spanned columns need a larger flex-grow. */
+    flex: var(--span) 1 auto;
   }
 
   & > :is(ca-column[span="2"], .span-2) {
@@ -110,9 +112,6 @@ ca-container[columns],
   }
   & > :is(ca-column[span="5"], .span-5) {
     --span: 5;
-  }
-  & > :is(ca-column[span="6"], .span-6) {
-    --span: 6;
   }
 
   &[gap="1"],
@@ -140,60 +139,60 @@ ca-container[columns],
     --gap: 3rem;
   }
 
-  &[x-gap="0"],
+  &[gap-x="0"],
   &.gap-x-0 {
     --gap-x: 0rem;
   }
-  &[x-gap="1"],
+  &[gap-x="1"],
   &.gap-x-1 {
     --gap-x: 0.5rem;
   }
-  &[x-gap="2"],
+  &[gap-x="2"],
   &.gap-x-2 {
     --gap-x: 1rem;
   }
-  &[x-gap="3"],
+  &[gap-x="3"],
   &.gap-x-3 {
     --gap-x: 1.5rem;
   }
-  &[x-gap="4"],
+  &[gap-x="4"],
   &.gap-x-4 {
     --gap-x: 2rem;
   }
-  &[x-gap="5"],
+  &[gap-x="5"],
   &.gap-x-5 {
     --gap-x: 2.5rem;
   }
-  &[x-gap="6"],
+  &[gap-x="6"],
   &.gap-x-6 {
     --gap-x: 3rem;
   }
 
-  &[y-gap="0"],
+  &[gap-y="0"],
   &.gap-y-0 {
     --gap-y: 0rem;
   }
-  &[y-gap="1"],
+  &[gap-y="1"],
   &.gap-y-1 {
     --gap-y: 0.5rem;
   }
-  &[y-gap="2"],
+  &[gap-y="2"],
   &.gap-y-2 {
     --gap-y: 1rem;
   }
-  &[y-gap="3"],
+  &[gap-y="3"],
   &.gap-y-3 {
     --gap-y: 1.5rem;
   }
-  &[y-gap="4"],
+  &[gap-y="4"],
   &.gap-y-4 {
     --gap-y: 2rem;
   }
-  &[y-gap="5"],
+  &[gap-y="5"],
   &.gap-y-5 {
     --gap-y: 2.5rem;
   }
-  &[y-gap="6"],
+  &[gap-y="6"],
   &.gap-y-6 {
     --gap-y: 3rem;
   }
@@ -214,8 +213,4 @@ ca-container[columns="4"],
 ca-container[columns="5"],
 .container-columns-5 {
   --columns: 5;
-}
-ca-container[columns="6"],
-.container-columns-6 {
-  --columns: 6;
 }
